@@ -2,7 +2,7 @@ sg3-utils (1.28-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Mon, 13 Apr 2009 13:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Mon, 20 Apr 2009 18:00:00 -0400
 
 sg3-utils (1.27-0.1) unstable; urgency=low
 
