@@ -2,8 +2,10 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.28 [20090413] [svn: r252]
-  - xxxxx
+Changelog for sg3_utils-1.28 [20090420] [svn: r254]
+  - utils/hxascdmp: in Windows set binary mode on read files
+  - sg_write_buffer,sg_write_long,sg_write_same: in Windows set
+    binary mode on read files
 
 Changelog for sg3_utils-1.27 [20090411] [svn: r250]
   - sg_write_same: new utility: 10, 16 and 32 byte cdb variants
